tests/baselines/reference/nullKeyword.errors.txt
tests/cases/compiler/nullKeyword.ts(1,1): error TS18049: The value 'null' cannot be used here.


==== tests/cases/compiler/nullKeyword.ts (1 errors) ====
    null.foo;
    ~~~~
!!! error TS18049: The value 'null' cannot be used here.